@@ -6,7 +6,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 @ResponseStatus(HttpStatus.UNPROCESSABLE_ENTITY)
 public abstract class IncorrectFormException extends ApiException {
     public IncorrectFormException(String field, String value) {
-        super(String.format("%s %s is invalid",
-                field, value));
+        super("%s %s is invalid".formatted(field, value));
     }
 }
